# app/schemas/search_books_schema.py
@@ -8,7 +8,7 @@ class SearchBooksSchema(Schema):
     subtitle = fields.String(required=False, validate=validate.Length(min=1))
     authors = fields.String(required=False, validate=validate.Length(min=1))
     categories = fields.String(required=False, validate=validate.Length(min=1))
-    publication_date = fields.Date(format="%Y-%m-%d", required=False)
+    publishedDate = fields.Date(format="%Y-%m-%d", required=False)
     publisher = fields.String(required=False, validate=validate.Length(min=1))
     description = fields.String(required=False, validate=validate.Length(min=1))
     image = fields.String(allow_none=False)
